--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -31,6 +31,7 @@ $color_danger: red;
 $color_success: green;
 $header_height: 80px;
 $nav_height: 550px;
+$transition_subMenu: 0.3s;
 
 body {
     --main: rgb(100, 181, 245);
