--- a/src/components/ProsconsFeature/proscons-feature.scss
+++ b/src/components/ProsconsFeature/proscons-feature.scss
@@ -6,6 +6,14 @@
     & > ul {
         & > li::first-letter {
             text-transform: capitalize;
+            
+        }
+        &.pros > li::before {
+            background-image: url(../../assets/img/icon_plus.svg);
+        }
+
+        &.cons > li::before {
+            background-image: url(../../assets/img/icon_minus.svg);
         }
     }
 }
