--- a/src/assets/css/_components.scss
+++ b/src/assets/css/_components.scss
@@ -133,3 +133,29 @@
         transition: border $transition_fast;
     }
 }
+
+
+
+
+.svg-icon {
+    transition: fill $transition-theme;
+    &.minus {
+        fill: var(--svg_minus); 
+    }
+    
+    &.plus {
+        fill: var(--svg_plus); 
+    }
+    
+    &.pro {
+        fill: var(--svg_pro); 
+    }
+    
+    &.con {
+        fill: var(--svg_con); 
+    }
+
+    &.question {
+        fill: var(--svg_question); 
+    }
+}
