--- a/src/components/Proscons/proscons.scss
+++ b/src/components/Proscons/proscons.scss
@@ -54,7 +54,7 @@
 
 
     & .pros li::before {
-        background-image: url('../../assets/img/mark_pro.png');
+        background-image: url('../../assets/img/icon_pro.png');
     }
     
     
@@ -65,7 +65,7 @@
         }
 
         li::before {
-            background-image: url('../../assets/img/mark_con.png');
+            background-image: url('../../assets/img/icon_con.png');
             background-size: 80% 80%;
             background-position: center center;
             background-repeat: no-repeat;
