--- a/src/components/ProsconsFeature/proscons-feature.scss
+++ b/src/components/ProsconsFeature/proscons-feature.scss
@@ -8,13 +8,13 @@
             text-transform: capitalize;
             
         }
-        &.pros > li::before {
+        /*&.pros > li::before {
             background-image: url(../../assets/img/icon_plus.svg);
         }
 
         &.cons > li::before {
             background-image: url(../../assets/img/icon_minus.svg);
-        }
+        }*/
     }
 }
 
