--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -47,6 +47,13 @@ body {
     --lang-text: #286181;
     --lang-text_add: #286181;
     --error: rgb(209, 16, 16);
+    --svg_minus: rgb(131, 131, 131);
+    --svg_plus: rgb(66, 173, 73);
+    --svg_pro: rgb(66, 173, 73);
+    --svg_con: rgb(255, 10, 0);
+    --svg_question: rgb(90, 90, 90);
+    --border_compare: rgb(163, 163, 163);
+    --text_mild: rgba(31, 40, 51, 0.5);
  }
  body.dark {
     --main: rgb(7, 113, 184);//rgb(13, 96, 173);
@@ -54,7 +61,7 @@ body {
     --main_vv: rgb(100, 181, 245);    
     --main_vv_RGB: 100, 181, 245;
     --bg: #1F2833;
-    --text: #EBEBEB;
+    --text: rgb(235, 235, 235);
     --text_vv: #1F2833;
     --text_contrast: #1F2833;
     --inputs-bg: #d6e3e6;
@@ -62,6 +69,14 @@ body {
     --lang-text: #286181;
     --lang-text_add: #EBEBEB;
     --error: rgb(252, 71, 71);
+    --svg_minus: rgb(163, 163, 163);
+    --svg_plus: rgb(66, 173, 73);
+    --svg_pro: rgb(66, 173, 73);
+    --svg_con: rgb(255, 10, 0);
+    --svg_question: rgb(163, 163, 163);
+    --border_compare: rgb(109, 109, 109);
+    --text_mild: rgba(235, 235, 235, 0.5);
+
  }
 
 
