--- a/src/assets/css/_components.scss
+++ b/src/assets/css/_components.scss
@@ -159,3 +159,58 @@
         fill: var(--svg_question); 
     }
 }
+
+
+
+.rating_value {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    background-color: var(--rating_bg);
+    transition: background-color $transition-theme;
+
+
+    & > .rating__value {
+        height: 100%;
+        transition: background-color $transition-theme;
+        
+        &.color_blue {
+            background-color: var(--rating_value_blue);
+        }
+        
+        &.color_red {
+            background-color: var(--rating_value_red);
+        }
+        
+        &.color_green {
+            background-color: var(--rating_value_green);
+        }
+    }
+
+
+    & > .border_inner {
+        position: absolute;
+        height: 100%;
+        width: 20%;
+        top: 0;
+        border-right: 1px dotted var(--rating_border_inner);
+        transition: border $transition-theme;
+
+
+        &_1 {
+            left: 0;
+        }
+        &_2 {
+            left: 20%;
+        }
+        &_3 {
+            left: 40%;
+        }
+        &_4 {
+            left: 60%;
+        }
+    }
+}
+
+
+
