--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -38,7 +38,7 @@ body {
     --main_RGB: 100, 181, 245;
     --main_vv: rgb(7, 113, 184);
     --main_vv_RGB: 7, 113, 184;
-    --bg: #EBEBEB;
+    --bg: rgb(235, 235, 235);
     --text: #1F2833;
     --text_vv: #EBEBEB;
     --text_contrast: #F3F3F3;
@@ -47,20 +47,32 @@ body {
     --lang-text: #286181;
     --lang-text_add: #286181;
     --error: rgb(209, 16, 16);
+
     --svg_minus: rgb(131, 131, 131);
     --svg_plus: rgb(66, 173, 73);
     --svg_pro: rgb(66, 173, 73);
     --svg_con: rgb(255, 10, 0);
     --svg_question: rgb(90, 90, 90);
+
     --border_compare: rgb(163, 163, 163);
     --text_mild: rgba(31, 40, 51, 0.5);
+
+    --rating_bg: rgb(196, 196, 196);
+    --rating_border_inner: rgb(163, 163, 163); //rgb(75, 75, 75);
+    --rating_value_blue: rgb(86, 88, 194);
+    --rating_value_green: rgb(64, 170, 54);
+    --rating_value_red: rgb(228, 43, 43);
+
+    --compare_selected: rgb(190, 190, 190);
+    --compare_mark: rgb(46, 46, 46);
+
  }
  body.dark {
     --main: rgb(7, 113, 184);//rgb(13, 96, 173);
     --main_RGB: 7, 113, 184;
     --main_vv: rgb(100, 181, 245);    
     --main_vv_RGB: 100, 181, 245;
-    --bg: #1F2833;
+    --bg: rgb(31, 40, 51);
     --text: rgb(235, 235, 235);
     --text_vv: #1F2833;
     --text_contrast: #1F2833;
@@ -69,13 +81,24 @@ body {
     --lang-text: #286181;
     --lang-text_add: #EBEBEB;
     --error: rgb(252, 71, 71);
+
     --svg_minus: rgb(163, 163, 163);
     --svg_plus: rgb(66, 173, 73);
     --svg_pro: rgb(66, 173, 73);
     --svg_con: rgb(255, 10, 0);
     --svg_question: rgb(163, 163, 163);
+
     --border_compare: rgb(109, 109, 109);
     --text_mild: rgba(235, 235, 235, 0.5);
+
+    --rating_bg: rgb(65, 65, 65);
+    --rating_border_inner: rgb(180, 180, 180);
+    --rating_value_blue: rgb(80, 100, 189);
+    --rating_value_green: rgb(11, 119, 1);
+    --rating_value_red: rgb(177, 0, 0);
+
+    --compare_selected: rgb(52, 65, 80);
+    --compare_mark: rgb(218, 218, 218);
 
  }
 
