--- a/src/pages/FibersCompare/FibersCompare.scss
+++ b/src/pages/FibersCompare/FibersCompare.scss
@@ -1,4 +1,6 @@
 @use '/src/assets/css/variables' as *;
+$col_first: 200px;
+$col_other: 130px;
 
 .page_compare {
     
@@ -13,6 +15,7 @@
             margin-top: 50px;
             width: 100%;
             position: relative;
+            min-height: 500px;
             //border: 3px solid red;
             //overflow: hidden;
 
@@ -24,13 +27,13 @@
                 //max-width: 100%;
                 display: grid;
                 grid-template-rows: 190px repeat(23, auto) 70px;
-                grid-template-columns: 180px repeat(auto-fit, 140px);
+                grid-template-columns: $col_first repeat(auto-fit, $col_other);
                 grid-auto-flow: column;
 
 
                 .cell {
                     position: relative;
-                    width: 140px;
+                    width: $col_other;
                     padding: 15px;
                     border-right: 1px solid var(--border_compare);
                     border-bottom: 1px solid var(--border_compare);
@@ -42,7 +45,7 @@
                     background-color: var(--bg);
                     transition: background-color $transition-theme, border $transition_theme;
 
-                    .img__container {
+                    & > .img__container {
                         width: 100%;
                         height: 70px;
                         
@@ -58,7 +61,7 @@
                         }
                         
                     }
-                    .button_blue {
+                    & .button_blue {
                         font-size: 14px;
                         padding: 5px 10px;
                         margin-left: auto;
@@ -70,6 +73,7 @@
                         font-weight: 600;
                         
                         & > span {
+                            font-size: .8em;
                             color: var(--text_mild);
                             
                             & > sup {
@@ -81,12 +85,14 @@
 
                     &.with-tip {
                         .tip {
-                            height: 20px;
-                            width: 20px;
+                            height: 17px;
+                            width: 17px;
                             position: absolute;
                             top: 0;
                             right: 0;
                             background-color: var(--border_compare);
+                            transition: background-color $transition_theme;
+
                             & > svg {
                                 padding: 4px;
                                 height: 100%;
@@ -94,17 +100,121 @@
                             }
                         }
                     }
+
+
+                    & .rating__container {
+                        height: 80%;
+                        width: 100%;
+                    }
+
+                    
+                    
+                    &.selected {
+                        background-color: var(--compare_selected);
+                    }
+
+
+                    &.padding_no {
+                        padding: 0;
+
+
+                        & label {
+                            cursor: pointer;
+                            height: 100%;
+                            width: 100%;
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                            
+                            & input {
+                                cursor: pointer;
+                                width: 0;
+                                height: 0;
+                                position: absolute;
+                            }
+
+                            & span {
+                                height: 15px;
+                                width: 15px;
+                                background-color: transparent;
+                                position: relative;
+                                transition: background-color $transition_fast ease-in-out;
+                                      
+                                
+                                &::before, &::after {
+                                    content: '';
+                                    position: absolute;
+                                    transition: border $transition_fast ease-in-out, background-color $transition_fast ease-in-out, transform $transition_fast ease-in-out;
+                                    top: 50%;
+                                    left: 50%;
+                                    display: block;
+                                }
+
+                                &::before {
+                                    height: 100%;
+                                    width: 100%;
+                                    border: 1px solid var(--rating_border_inner);
+                                    transform: translate(-50%, -50%);
+                                    background-color: transparent;
+                                }
+
+                                &::after {
+                                    height: 25%;
+                                    width: 70%;
+                                    border-left: 3px solid transparent;
+                                    border-bottom: 3px solid transparent;
+                                    transform: translate(-50%, -65%) rotate(-45deg);
+                                }
+                            }
+
+                            & input:checked ~ span {
+                                
+                                &::before {
+                                    background-color: var(--main);
+                                    transform: translate(-50%, -50%) rotate(90deg);
+                                }
+
+                                &::after {
+                                    border-color: var(--compare_mark);
+                                }
+                            }
+                        }
+                    }
+
+                    &:hover {
+                          background-color: var(--compare_selected);
+
+                    }
                 }
 
                 .fixed-left {
                     position: sticky;
                     left: 0;
-                    width: 180px;
+                    width: $col_first;
+                    z-index: 2;
 
                     & span {
                         text-align: left;
                         font-weight: 700;
                         font-size: 18px;
+                    }
+                }
+
+                & .selectors {
+                    flex-wrap: nowrap;
+                    flex-direction: row;
+                    gap: 10px;
+
+                    & button {
+                        white-space: nowrap;
+                    }
+
+                    & .error-message {
+                        align-self: center;
+                        font-size: 13px;
+                        color: var(--error);
+                        text-align: center;
+
                     }
                 }
 
@@ -137,4 +247,5 @@
         }
     }
 }
+
 
