--- a/src/components/FiberItem/fiber-item.scss
+++ b/src/components/FiberItem/fiber-item.scss
@@ -99,7 +99,12 @@
                 }
             }
 
-
+            & .link_compareList {
+                margin-top: 50px;
+                width: fit-content;
+                margin-left: auto;  
+                margin-right: auto;
+            }
 
         }
 
