--- a/src/assets/css/_base.scss
+++ b/src/assets/css/_base.scss
@@ -8,7 +8,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color: var(--text)
+    color: var(--text);
+    scroll-behavior: smooth;
 }
 /*
 html,body, h1,h2,h3,h4,h5,h6,p,span,div,nav,ul,li {
@@ -82,6 +83,12 @@ h3 {
 span {
     transition: color $transition_theme;
     color: var(--text);
+    font-size: 16px;
+    
+    @include respond-to(xs) {
+        font-size: 14px;
+    }
+
 }
 
 label {
