--- a/src/components/tiny/RatingLine/rating-line.scss
+++ b/src/components/tiny/RatingLine/rating-line.scss
@@ -1,1 +1,77 @@
 @use '/src/assets/css/variables' as *;
+
+
+.rating_value {
+    width: 100%;
+    //height: 100%;
+    //height: 60px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    
+    
+    & > .value__container {
+        width: 100%;    
+        aspect-ratio: 5;
+        position: relative;
+        background-color: var(--rating_bg);
+        transition: background-color $transition-theme;
+
+
+        & > .rating__value {
+            height: 100%;
+            position: relative;
+            transition: background-color $transition-theme;
+            
+            &.color_blue {
+                background-color: var(--rating_value_blue);
+            }
+            
+            &.color_red {
+                background-color: var(--rating_value_red);
+            }
+            
+            &.color_green {
+                background-color: var(--rating_value_green);
+            }
+        }
+
+        & .border_inner {
+            position: absolute;
+            height: 100%;
+            width: 20%;
+            top: 0;
+            border-right: 1px dotted var(--rating_border_inner);
+            transition: border $transition-theme;
+    
+            &_1 {
+                left: 0;
+            }
+            &_2 {
+                left: 20%;
+            }
+            &_3 {
+                left: 40%;
+            }
+            &_4 {
+                left: 60%;
+            }
+            
+        }
+
+    }
+
+    & > .rating__legend {
+        margin-top: 2px;
+        & > span {
+            color: var(--text);
+            font-weight: 700;
+            
+            & > span {
+                font-weight: 400;
+                font-size: .8em;
+                color: var(--text_mild);
+            }
+        }
+    }
+}
